# test_actions_cpp

./: .clang-format  .clangd.in  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
cmake/: ccache.cmake
src/: CMakeLists.txt  main.cpp
